--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,8 @@
+@import url("https://raw.githubusercontent.com/chinchang/hint.css/master/hint.min.css");
 
 @font-face {
   font-family: Holotype;
-  src: url("Holotype 9 Basic.ttf");
+  src: url("assets/Holotype 9 Basic.ttf");
 }
 
 
@@ -14,7 +15,7 @@ body, html {
 
 .parallax {
   /* The image used */
-  background-image: url("photo.jpeg");
+  background-image: url("assets/photo.jpeg");
 
   /* Full height */
   height: 100%;
@@ -91,18 +92,6 @@ box-icon, img{
 
 }
 
-box-icon:hover::after, img:hover::after{
-  position: absolute !important;
-  content: "Youtube";
-  background-color: black;
-  color: aliceblue;
-font-size: 40px;
-  font-family: Holotype;
-  border: 4px aliceblue;
-  padding: 8px;
-  z-index: 99;
-  
- }
 
 
  iframe{
